--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,30 @@
 zookeeper:
   image: wurstmeister/zookeeper
-  ports: 
+  ports:
     - "49181:2181"
     - "22"
 nimbus:
-  image: wurstmeister/storm-nimbus
+  image: robeeeert/storm-nimbus
   ports:
     - "49773:3773"
     - "49772:3772"
     - "49627:6627"
     - "22"
-  links: 
+  links:
     - zookeeper:zk
 supervisor:
-  image: wurstmeister/storm-supervisor
+  image: robeeeert/storm-supervisor
   ports:
     - "8000"
     - "22"
-  links: 
+  links:
     - nimbus:nimbus
     - zookeeper:zk
 ui:
-  image: wurstmeister/storm-ui
+  image: robeeeert/storm-ui
   ports:
     - "49080:8080"
     - "22"
-  links: 
+  links:
     - nimbus:nimbus
     - zookeeper:zk
