--- a/storm-ui/Dockerfile
+++ b/storm-ui/Dockerfile
@@ -1,11 +1,6 @@
-FROM wurstmeister/storm:0.9.4
-MAINTAINER Wurstmeister
+FROM robeeeert/storm
+MAINTAINER robeeeert
 RUN /usr/bin/config-supervisord.sh ui
 
 EXPOSE 8080
 CMD /usr/bin/start-supervisor.sh
-
-
-
-
-
